Updated president contact

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           <li>Phone: (608) 284-8653 </li>
           <br>
           <li>Current President :</li>
-          <li>Nikki Anderson, Change Boutique</li><br>
-          <li><a class="contact" href="mailto:gwabavicepresident@gmail.com">gwabavicepresident@gmail.com</a></li>
+          <li>J. Cheema, A Place to Be</li><br>
+          <li><a class="contact" href="mailto:gwabavicepresident@gmail.com">aplacetobe@cheemaoptions.org</a></li>
         </ul>
        </div>
     </div>
