Included new key and made modifications to Welcome and contact info

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="js/lib/jquery-2.0.3.min.js"></script>
   <script type="text/javascript">var pixastic_parseonload = true;</script>
   <script src='js/lib/pixastic.custom.js' style="text/javascript"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNODU1KIwo5Nrx25eyBhm3J1lKff8txMk&libraries=places&sensor=false" type="text/javascript"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9KhDxEtZcFN5i57pA4Q16wNM6VwAakhA&libraries=places&sensor=false" type="text/javascript"></script>
   <script src='js/lib/markerwithlabel_packed.js' style="text/javascript"></script>
   <script src='js/lib/infobox_packed.js' style="text/javascript"></script>
   <script src='js/lib/date.js' style="text/javascript"></script>
@@ -47,15 +47,12 @@
     <div class="headline home">
       <div class="headline-interior">
         <h1>Welcome to Willy Street</h1>
-        <p>Named one of the Top 10 Great Neighborhoods in the United States,
-           the <a target="_blank" href="https://www.planning.org/greatplaces/neighborhoods/2013/">Williamson-Marquette Neighborhood</a> is one of Madison, Wisconsin's
-           oldest and most exciting neighborhoods. Willy Street, the spine of
-           the neighborhood, is located less than one mile off the Capitol
-           Square and is known for its walkability, strong community engagement,
-           summer music festivals and diverse business and entertainment offerings
-           including cafes, restaurants, bars, clubs, art, theater, specialty
-           shopping, healing arts, bike paths, parks and more! Visit Willy
-           Street, feel like a local!</p>
+        <p>Greater Williamson Area Business Association (GWABA) seeks to improve the quality of economic and residential life
+           in the Williamson-Marquette neighborhood by encouraging well-planned, high-quality and balanced commercial,
+           industrial and residential development along with economic growth. Businesses and organizations join GWABA to reach new customers,
+           advocate for issues important to their business, and network with other business owners to build a thriving,
+           diverse community through GWABA events such as Taste of Willy Street and Central Park Sessions.
+           Visit <a target="_blank" href='http://gwaba.org/'>GWABA.org</a> for more information and <a target="_blank" href='http://gwaba.org/membership.html'>join today</a>!</p>
          <a target="_blank" class="explore-form dir">
            <h3>Explore</h3>
            <img src="img/download.png" alt="Explore Willy Street Area Directory">
@@ -82,13 +79,10 @@
     <div class="headline membership">
       <div class="headline-interior">
         <h1>Membership</h1>
-        <p>2015 is shaping up to be an exciting year in the Williamson-Marquette
-           Neighborhood! Greater Williamson Area Business Association (GWABA)
-           invites neighborhood businesses and organizations to join GWABA to reach
-           new customers, advocate for issues important to their business, and
-           network with other business owners to build a thriving, diverse community
-           through GWABA events such as Taste of Willy Street and Central Park Sessions.
-           Download GWABA’s membership registration form and join today!</p>
+        <p>Greater Williamson Area Business Association (GWABA) invites neighborhood businesses and organizations to join GWABA to reach new customers,
+           advocate for issues important to their business, and network with other business owners to build a thriving,
+           diverse community through GWABA events such as Taste of Willy Street and Central Park Sessions.
+           Visit <a target="_blank" href='http://gwaba.org/'>GWABA.org</a> for more information and <a target="_blank" href='http://gwaba.org/membership.html'>join today</a>!</p>
         <a target="_blank" class="explore-form download" href="docs/GWABA_Membership_Form_2015.pdf">
           <h3>Download Form</h3>
           <img src="img/download.png" alt="Download Willy Street Membership Form">
@@ -105,7 +99,9 @@
           <br>
           <li>Current President :</li>
           <li>J. Cheema, A Place to Be</li><br>
-          <li><a class="contact" href="mailto:gwabavicepresident@gmail.com">aplacetobe@cheemaoptions.org</a></li>
+          <li><a class="contact" href="mailto:aplacetobe@cheemaoptions.org">aplacetobe@cheemaoptions.org</a></li>
+          <li><a target="_blank" class="contact" href="http://gwaba.org/">GWABA.org</a></li>
+          <li><a target="_blank" class="contact" href="https://www.facebook.com/visitwillystreet?fref=ts">Facebook: GWABA</a></li>
         </ul>
        </div>
     </div>
