Changed Download Form to Join Us

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
            advocate for issues important to their business, and network with other business owners to build a thriving,
            diverse community through GWABA events such as Taste of Willy Street and Central Park Sessions.
            Visit <a target="_blank" href='http://gwaba.org/'>GWABA.org</a> for more information and <a target="_blank" href='http://gwaba.org/membership.html'>join today</a>!</p>
-        <a target="_blank" class="explore-form download" href="docs/GWABA_Membership_Form_2015.pdf">
-          <h3>Download Form</h3>
-          <img src="img/download.png" alt="Download Willy Street Membership Form">
+        <a target="_blank" class="explore-form download" href="http://gwaba.org/membership.html">
+          <h3>Join Today</h3>
+          <img src="img/download.png" alt="Membership Page">
         </a>
       </div>
     </div>
